--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "nabre",
+  "name": "FreeNAB",
+  "description": "A Free and Open Source translation app for the NAB",
   "private": true,
-  "version": "0.0.0",
+  "author": "ByteWired9",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "electron:dev": "vite dev & electron .",
+    "electron:build": "vite build && electron-builder",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -16,11 +20,14 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@electron/remote": "^2.1.2",
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "electron": "^34.2.0",
+    "electron-builder": "^25.1.8",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
@@ -28,6 +35,20 @@
     "tailwindcss": "^4.0.8",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-electron": "^0.29.0"
+  },
+  "main": "electron/main.js",
+  "build": {
+    "appId": "whats.an.appid",
+    "productName": "FreeNAB",
+    "directories": {
+      "output": "dist",
+      "buildResources": "assets"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ]
   }
 }
